<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.blosa.calculadora.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/num0"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="93dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/n7"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/num7" />

            <Button
                android:id="@+id/n4"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/num4" />

            <Button
                android:id="@+id/n1"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/num1" />

            <Button
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/borrar" />

            <Button
                android:id="@+id/negpos"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/posneg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="189dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="247dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="91dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/n8"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/num8" />

                    <Button
                        android:id="@+id/n5"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/num5" />

                    <Button
                        android:id="@+id/n2"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/num2" />

                    <Button
                        android:id="@+id/n0"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/num0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/n9"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/num9" />

                    <Button
                        android:id="@+id/n6"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/num6" />

                    <Button
                        android:id="@+id/n3"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/num3" />

                    <Button
                        android:id="@+id/dot"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:text="@string/coma" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/igual"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/igual" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/divi"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/dividir" />

            <Button
                android:id="@+id/mult"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/multiplicar" />

            <Button
                android:id="@+id/resta"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/restar" />

            <Button
                android:id="@+id/suma"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:text="@string/sumar" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
